--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "crypto": "0.0.3",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mariasql": "^0.2.6"
   },
   "devDependencies": {
     "now": "^5.2.1",
