--- a/text/package.json
+++ b/text/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build-web": "webpack",
+    "start-web": "webpack-dev-server",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "now"
   },
   "author": "changhc",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.24.0",
+    "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.2.2",
     "babel-preset-react": "^6.23.0",
@@ -22,6 +26,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "now": "^6.1.1",
     "react-scripts": "^0.9.5",
     "style-loader": "^0.16.1"
   },
@@ -29,6 +34,7 @@
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router-dom": "^4.1.1",
     "react-scripts": "^0.9.5"
   }
 }
